--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "check:node": "node ./scripts/check-node-version.js",
+    "prebuild": "npm run check:node"
+  },
+  "engines": {
+    "node": ">=20.9.0"
   },
   "dependencies": {
     "clsx": "^2.1.1",
@@ -26,6 +31,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "semver": "^7"
   }
 }
